# joycon2-to-key

./: .gitignore  README.en.md  README.md  THIRD-PARTY-NOTICES.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
public/: theme-init.js
scripts/: check-contrast.mjs  check-locales.mjs  gen-icon-set.mjs  gen-icon-tags.mjs  gen-thirdparty.mjs  release-notes.mjs
src/: App.tsx  MainScreen.tsx  PieOverlay.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: apps.rs  buttons.rs  commands.rs  foreground.rs  input_thread.rs  keyboard.rs  keys.rs  lib.rs  main.rs  mouse.rs  overlay.rs
src-tauri/src/config/: defaults.rs  mod.rs  runtime.rs
src-tauri/src/config/fixtures/: workspace_v1.json
src-tauri/src/config/schema/: definitions.rs  mod.rs  pie.rs  press.rs  profile.rs  settings.rs
src-tauri/src/config/storage/: backups.rs  bundle.rs  mod.rs  seed.rs  usage.rs  workspace.rs
src-tauri/src/joycon/: discovery.rs  link.rs  mod.rs  protocol.rs  telemetry.rs
src-tauri/src/presets/: editing.json
src-tauri/src/processor/: cursor.rs  effects.rs  mod.rs  press.rs  resolver.rs  variant.rs
src/components/: Confirm.tsx  HelpText.tsx  PieLabel.tsx  PieVisual.tsx  TitleBar.tsx  TooltipHost.tsx  UpdateModal.tsx
src/components/joycon/: JoyConPad.tsx  JoyConPadRight.tsx  padParts.tsx
src/components/main/: ActiveProfileChip.tsx  AppNav.tsx  BatteryLine.tsx  ConnectionGuide.tsx  ConnectionToggle.tsx  EditorPopover.tsx  HelpPage.tsx  Tour.tsx  (+7 more)
src/lib/: battery.test.ts  changelog.json  confirms.ts  defRef.ts  defResolver.ts  defUsage.ts  i18n.ts  iconSet.generated.ts  iconTags.generated.json  iconTags.ts  imageIcon.ts  inputRisk.test.ts  inputRisk.ts  joyconColors.ts  keyCatalog.ts  opIcons.ts  pages.ts  pieGeometry.ts  pieLook.ts  piePresets.test.ts  piePresets.ts  playerLeds.ts  pressDraftCache.ts  recentDefs.ts  recentIcons.ts  reorder.test.ts  reorder.ts  sounds.ts  tauri.ts  themes.ts  toast.test.ts  toast.ts  uniqueName.test.ts  uniqueName.ts  usage.ts  useConfigActions.ts  useConfigIO.ts  useConfirmedDelete.ts  useDefinitionSync.ts  useDefinitionsFilter.ts  (+20 more)
src/store/: index.ts
(+101 files in other folders)
