[package]
name = "joycon2-to-key"
version = "0.1.13"
description = "Map Nintendo Switch 2 Joy-Con (Joy-Con 2) BLE input to Windows keyboard and mouse actions."
authors = ["pboaa"]
license = "GPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "joycon2_to_key_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
# Enforce a single running instance: a second launch focuses the existing
# window instead of starting a rival BLE loop / input thread.
tauri-plugin-single-instance = "2"
# In-app updates: check GitHub Releases for a newer signed installer, download
# and install it, then relaunch (via the process plugin). Never forced — the UI
# only surfaces an update; the user chooses when.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
# preserve_order: serde_json::Value keeps insertion order (IndexMap) instead of
# a sorted BTreeMap. The Tauri IPC round-trips config through Value, so without
# this, map keys like layer names get alphabetized on save/load.
serde_json = { version = "1", features = ["preserve_order"] }
btleplug = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
futures = "0.3"
uuid = "1"
once_cell = "1"
png = "0.17"
base64 = "0.22"
indexmap = { version = "2", features = ["serde"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
  "Win32_Graphics_Gdi",
  "Win32_Storage_FileSystem",
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
] }

